home and character screen skeleton

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
     <link rel="stylesheet" href="css/style.css">
-    <script src="scripts/game.js"></script>
+    <script src="scripts/game.js" type="module"></script>
     <title>The Stims</title>
 </head>
 <body>
@@ -16,9 +16,9 @@
     </header>
 
     <main>
-        <p>
-            <em>when you order sims 4 on wish</em>
-        </p>
+        <noscript>
+            This page requires javascript to view.
+        </noscript>
     </main>
 
     <footer>
