--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/character_cards.css">
     <script src="scripts/game.js" type="module"></script>
     <title>The Stims</title>
 </head>
