focus character cards, scenario screens

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <script src="scripts/game.js" type="module"></script>
     <title>The Stims</title>
 </head>
+
 <body>
     <header>
         <h1>
@@ -22,8 +24,19 @@
         </noscript>
     </main>
 
+    <div id="HUD">
+        <img id="character-icon" src="./assets/blank_character_icon.png" alt="blank character icon">
+        <div>
+            Story: Nora
+        </div>
+        <div>
+            Scenario: 8
+        </div>
+    </div>
+
     <footer>
 
     </footer>
 </body>
+
 </html>
