major design/animation overhaul

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>The Stims</title>
 </head>
 
-<body>
+<body data-bg="none">
     <header>
         <h1>
             The Stims
@@ -24,7 +24,7 @@
         </noscript>
     </main>
 
-    <div id="HUD">
+    <div id="HUD" class="hide">
         <img id="character-icon" src="./assets/blank_character_icon.png" alt="blank character icon">
         <div>
             Story: Nora
