character select dynamic generation

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
     <div id="HUD" class="hide">
         <img id="character-icon" src="./assets/blank_character_icon.png" alt="blank character icon">
-        <div>
+        <div id="character-name">
             Story: Nora
         </div>
-        <div>
+        <div id="scenario-num">
             Scenario: 8
         </div>
     </div>
