Added background audio and supporting functions, to be tested

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body data-bg="none">
+    <audio controls id = "GameAudio" autoplay hidden loop> 
+        <source src="/assets/sample_sound.mp3" type="audio/mp3">
+        Your browser does not support audio.
+    </audio>
     <header>
         <h1>
             The Stims
