audio enable choice

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body data-bg="none">
-    <audio controls id = "GameAudio" autoplay hidden loop> 
+    <audio controls id = "GameAudio" hidden loop> 
         <source src="/assets/sample_menu.mp3" type="audio/mp3">
         Your browser does not support audio.
     </audio>
