maybe fix asset loading issue

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body data-bg="none">
     <audio controls id = "GameAudio" hidden loop> 
-        <source src="/assets/sample_menu.mp3" type="audio/mp3">
+        <source src="./assets/sample_menu.mp3" type="audio/mp3">
         Your browser does not support audio.
     </audio>
     <header>
