Uploaded cafeteria.mp3, pizzicato audio playing with distortion

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body data-bg="none">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pizzicato/0.6.4/Pizzicato.js"></script>
     <audio controls id = "GameAudio" hidden loop> 
         <source src="./assets/sample_menu.mp3" type="audio/mp3">
         Your browser does not support audio.
