visual stress effects

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/character_cards.css">
     <script src="scripts/game.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pizzicato/0.6.4/Pizzicato.js"></script>
     <title>The Stims</title>
 </head>
 
-<body data-bg="none">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pizzicato/0.6.4/Pizzicato.js"></script>
+<body data-stress-effects="none">
+    <div id="backdrop" data-bg="none"></div>
     <audio controls id = "GameAudio" hidden loop> 
         <source src="./assets/sample_menu.mp3" type="audio/mp3">
         Your browser does not support audio.
