--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <h1>
             The Stims
         </h1>
+        <div id="menu">
+            <button id="button-toggle-sound" title="Toggle sound">
+                <img src="./assets/ui_icons/volume-mute.svg" alt="Toggle sound">
+            </button>
+        </div>
     </header>
 
     <main>
