floaty text proof of concept

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body data-stress-effects="none">
     <div id="backdrop" data-bg="none"></div>
+    <div id="floaty-text"></div>
     <audio controls id = "GameAudio" hidden loop> 
         <source src="./assets/sample_menu.mp3" type="audio/mp3">
         Your browser does not support audio.
